--- a/index.html
+++ b/index.html
@@ -1,10 +1,212 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>My Awesome Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Pioneers of Artificial Intelligence</title>
+    <style>
+        /* --- General Styling & Fonts --- */
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #f0f2f5; /* Light gray background */
+            color: #333;
+            margin: 0;
+            padding: 2rem;
+        }
+
+        /* --- Header & Title --- */
+        .header {
+            text-align: center;
+            margin-bottom: 3rem;
+        }
+
+        .header h1 {
+            font-size: 3rem;
+            color: #2c3e50; /* Dark blue-gray */
+            margin-bottom: 0.5rem;
+        }
+
+        .header p {
+            font-size: 1.1rem;
+            max-width: 800px;
+            margin: 0 auto;
+            line-height: 1.6;
+            color: #555;
+        }
+
+        /* --- Pioneer Grid Layout --- */
+        .pioneer-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); /* Responsive grid */
+            gap: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        /* --- Pioneer Card Styling --- */
+        .pioneer-card {
+            background-color: #ffffff;
+            border-radius: 15px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            padding: 2rem;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .pioneer-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+        }
+
+        .pioneer-card img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%; /* Circular images */
+            object-fit: cover; /* Prevents image distortion */
+            border: 5px solid #e9ecef; /* Light border around image */
+        }
+
+        .pioneer-card h2 {
+            margin: 1rem 0 0.25rem;
+            font-size: 1.5rem;
+            color: #2c3e50;
+        }
+
+        .pioneer-card .timeframe {
+            font-size: 0.9rem;
+            color: #777;
+            font-weight: 300;
+            margin-bottom: 1.5rem;
+        }
+
+        /* --- Button Styling --- */
+        .btn {
+            display: inline-block;
+            padding: 12px 28px;
+            border-radius: 50px; /* Pill-shaped button */
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+            font-size: 1rem;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            border: none;
+            cursor: pointer;
+        }
+
+        .btn:hover {
+            transform: scale(1.05); /* Slightly enlarge button on hover */
+        }
+
+        /* --- Button Color Palette --- */
+        .btn-1 { background: linear-gradient(45deg, #007bff, #0056b3); } /* Blue */
+        .btn-2 { background: linear-gradient(45deg, #6f42c1, #4d2d87); } /* Purple */
+        .btn-3 { background: linear-gradient(45deg, #28a745, #1c7430); } /* Green */
+        .btn-4 { background: linear-gradient(45deg, #fd7e14, #c7610b); } /* Orange */
+        .btn-5 { background: linear-gradient(45deg, #dc3545, #a71d2a); } /* Red */
+        .btn-6 { background: linear-gradient(45deg, #17a2b8, #0f6c7a); } /* Teal */
+
+    </style>
 </head>
 <body>
-<h1>Hello, World!</h1>
-<p>Welcome to my first GitHub Pages website.</p>
+
+    <header class="header">
+        <h1>The Pioneers of Artificial Intelligence</h1>
+        <p>
+            An AI Pioneer is a visionary thinker, scientist, or engineer whose foundational ideas and groundbreaking work carved the path for modern artificial intelligence. They challenged the limits of computation, explored the nature of thought, and built the conceptual and practical tools that allow machines to learn, reason, and perceive. This collection celebrates their enduring legacy.
+        </p>
+    </header>
+
+    <main>
+        <div class="pioneer-grid">
+
+            <div class="pioneer-card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Al-Khwarizmi.jpg/800px-Al-Khwarizmi.jpg" alt="Al-Khwarizmi">
+                <h2>Al-Khwarizmi</h2>
+                <p class="timeframe">c. 780 – c. 850</p>
+                <a href="Khwarizimi.html" class="btn btn-1">Explore Legacy</a>
+            </div>
+
+            <div class="pioneer-card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/George_Boole_color.jpg/800px-George_Boole_color.jpg" alt="George Boole">
+                <h2>George Boole</h2>
+                <p class="timeframe">1815 – 1864</p>
+                <a href="Boole.html" class="btn btn-2">Explore Legacy</a>
+            </div>
+
+            <div class="pioneer-card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Alan_Turing_Aged_16.jpg/800px-Alan_Turing_Aged_16.jpg" alt="Alan Turing">
+                <h2>Alan Turing</h2>
+                <p class="timeframe">1912 – 1954</p>
+                <a href="Turing.html" class="btn btn-3">Explore Legacy</a>
+            </div>
+
+            <div class="pioneer-card">
+                <img src="https://history-computer.com/ModernComputer/Software/images/Samuel.jpg" alt="Arthur Samuel">
+                <h2>Arthur Samuel</h2>
+                <p class="timeframe">1901 – 1990</p>
+                <a href="Samuel.html" class="btn btn-4">Explore Legacy</a>
+            </div>
+
+            <div class="pioneer-card">
+                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Joseph_Weizenbaum_at_the_Chaos_Communication_Congress_2002.jpg/800px-Joseph_Weizenbaum_at_the_Chaos_Communication_Congress_2002.jpg" alt="Joseph Weizenbaum">
+                <h2>Joseph Weizenbaum</h2>
+                <p class="timeframe">1923 – 2008</p>
+                <a href="Weizenbaum.html" class="btn btn-5">Explore Legacy</a>
+            </div>
+
+            <div class="pioneer-card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/John_McCarthy_Stanford.jpg/800px-John_McCarthy_Stanford.jpg" alt="John McCarthy">
+                <h2>John McCarthy</h2>
+                <p class="timeframe">1927 – 2011</p>
+                <a href="McCarthy.html" class="btn btn-6">Explore Legacy</a>
+            </div>
+            
+            <div class="pioneer-card">
+                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Marvin_Minsky_at_the_National_Academy_of_Engineering_-_2005.jpg/800px-Marvin_Minsky_at_the_National_Academy_of_Engineering_-_2005.jpg" alt="Marvin Minsky">
+                <h2>Marvin Minsky</h2>
+                <p class="timeframe">1927 – 2016</p>
+                <a href="Minsky.html" class="btn btn-1">Explore Legacy</a>
+            </div>
+
+            <div class="pioneer-card">
+                 <img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/8e/Herbert_A._Simon.jpg/800px-Herbert_A._Simon.jpg" alt="Herbert Simon">
+                <h2>Herbert Simon</h2>
+                <p class="timeframe">1916 – 2001</p>
+                <a href="Simon.html" class="btn btn-2">Explore Legacy</a>
+            </div>
+
+            <div class="pioneer-card">
+                 <img src="https://upload.wikimedia.org/wikipedia/en/b/b5/Allen_Newell.jpg" alt="Allen Newell">
+                <h2>Allen Newell</h2>
+                <p class="timeframe">1927 – 1992</p>
+                <a href="Newell.html" class="btn btn-3">Explore Legacy</a>
+            </div>
+
+            <div class="pioneer-card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Geoffrey_Hinton_at_a_2016_Royal_Society_event_in_London_for_the_book_The_Future_of_Go_3_%28cropped%29.jpg/800px-Geoffrey_Hinton_at_a_2016_Royal_Society_event_in_London_for_the_book_The_Future_of_Go_3_%28cropped%29.jpg" alt="Geoffrey Hinton">
+                <h2>Geoffrey Hinton</h2>
+                <p class="timeframe">1947 – Present</p>
+                <a href="Hinton.html" class="btn btn-4">Explore Legacy</a>
+            </div>
+
+            <div class="pioneer-card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Fei-Fei_Li_at_the_2018_WIRED25_Summit_%28cropped%29.jpg/800px-Fei-Fei_Li_at_the_2018_WIRED25_Summit_%28cropped%29.jpg" alt="Fei-Fei Li">
+                <h2>Fei-Fei Li</h2>
+                <p class="timeframe">1976 – Present</p>
+                <a href="Li.html" class="btn btn-5">Explore Legacy</a>
+            </div>
+
+            <div class="pioneer-card">
+                <img src="https://media.licdn.com/dms/image/D5603AQErB7mSqSTuRg/profile-displayphoto-shrink_800_800/0/1715014382599?e=2147483647&v=beta&t=o30Q7jNqf-J8sWb2xZ2Y9hL9kR-4tV3aG9hO4UjP8jY" alt="Ashish Vaswani">
+                <h2>Ashish Vaswani</h2>
+                <p class="timeframe">Contemporary</p>
+                <a href="Vaswani.html" class="btn btn-6">Explore Legacy</a>
+            </div>
+
+        </div>
+    </main>
+
 </body>
 </html>
