--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
             
             <div class="pioneer-card">
-                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Marvin_Minsky_at_the_National_Academy_of_Engineering_-_2005.jpg/800px-Marvin_Minsky_at_the_National_Academy_of_Engineering_-_2005.jpg" alt="Marvin Minsky">
+                 <img src="https://upload.wikimedia.org/wikipedia/commons/f/f9/Marvin_Minsky_at_OLPCb_%283x4_cropped%29.jpg" alt="Marvin Minsky">
                 <h2>Marvin Minsky</h2>
                 <p class="timeframe">1927 – 2016</p>
                 <a href="Minsky.html" class="btn btn-1">Explore Legacy</a>
