--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
 
             <div class="pioneer-card">
-                 <img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/8e/Herbert_A._Simon.jpg/800px-Herbert_A._Simon.jpg" alt="Herbert Simon">
+                 <img src="https://upload.wikimedia.org/wikipedia/commons/4/4d/Herbert_Simon%2C_RIT_NandE_Vol13Num11_1981_Mar19_Complete.jpg" alt="Herbert Simon">
                 <h2>Herbert Simon</h2>
                 <p class="timeframe">1916 – 2001</p>
                 <a href="Simon.html" class="btn btn-2">Explore Legacy</a>
